final styling and cleaning up of code

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -68,6 +68,10 @@ body {
   color: black;
 }
 
+#betweenAnswerAndButton {
+  padding: 10px;
+}
+
 span.firstNumberInput {
   background-color: black;
   color: white;
